feat: new config table + db functions + tests + handler refactor: moved post and response models feat: api can now send email
