# api/src/handlers/authentication_handler.rs
@@ -1,20 +1,23 @@
-use actix_web::{web, HttpResponse, post, ResponseError};
+use actix_web::{HttpResponse, post, ResponseError, web};
 use actix_web::cookie::CookieBuilder;
+use chrono::{Duration, Utc};
 use garde::Validate;
-use jsonwebtoken::{decode, encode, Header, Validation, Algorithm, EncodingKey, DecodingKey};
-use chrono::{Utc, Duration};
+use jsonwebtoken::{Algorithm, decode, DecodingKey, encode, EncodingKey, Header, Validation};
+use uuid::Uuid;
 
+use application::database::config::create_user_config;
 use application::database::user_passwords::{create_user_password, get_user_password_by_user_id};
 use application::database::users::{create_user, get_user_by_email, get_user_by_username};
+use domain::models::config::NewUserConfig;
 use domain::models::user_passwords::NewUserPassword;
 use domain::models::users::{NewUser, User, UserRole};
 use infrastructure::DBPool;
+use shared::app_config::Config;
 use shared::app_state_model::AppState;
 use shared::error_models::{APIError, DBError, InternalError, ServerError, UnauthorizedError, UserError};
-use shared::post_models::{LoginUserPostModel, RegisterUserPostModel};
 use shared::token_models::UserClaims;
-use uuid::Uuid;
-use shared::app_config::Config;
+
+use crate::models::post_models::{LoginUserPostModel, RegisterUserPostModel};
 
 struct UserInfo {
     id: Uuid,
@@ -47,6 +50,22 @@ async fn register_route(
     info: web::Json<RegisterUserPostModel>,
 ) -> HttpResponse {
     let result = web::block(move || {
+        let config = {
+            let config_guard = data.config.read();
+            config_guard.clone()
+        };
+
+        if config.clone().main_config.register == false {
+            return Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)));
+        }
+
+        // Check if email domain in credentials is part of the domains' whitelist
+        let email_domain = info.email.split('@').collect::<Vec<&str>>()[1];
+        if config.clone().main_config.authorized_domains.len() != 0 &&
+            !config.clone().main_config.authorized_domains.contains(&Some(email_domain.to_string())) {
+            return Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)));
+        }
+
         let conn = data.database_pool.clone().as_ref().clone();
         let credentials = info.into_inner();
 
@@ -70,13 +89,19 @@ async fn register_route(
             password: hashed_password,
         })?;
 
+        // Init user config
+        create_user_config(&conn, NewUserConfig{
+            user_id,
+            alerts: None,
+        })?;
+
         let info = UserInfo {
             id: user_id,
             role: UserRole::User,
             token_version: 0,
         };
 
-        let token = encode_token(&info, &data.config)?;
+        let token = encode_token(&info, &config)?;
         Ok(token)
     }).await;
 
@@ -97,7 +122,7 @@ async fn register_route(
 
 /// Login a user
 ///
-/// This endpoint allows users to login to their account.
+/// This endpoint allows users to log in to their account.
 #[utoipa::path(
     post,
     path = "/login",
@@ -120,20 +145,37 @@ async fn login_route(
     info: web::Json<LoginUserPostModel>,
 ) -> HttpResponse {
     let result = web::block(move || {
+        let config = {
+            let config_guard = data.config.read();
+            config_guard.clone()
+        };
+
         let conn: DBPool = data.database_pool.clone().as_ref().clone();
         let credentials = info.into_inner();
 
         // Check user
-        let user = get_user_from_body(&conn, &credentials.login)?;
+        let user = match get_user_from_body(&conn, &credentials.login) {
+            Ok(user) => user,
+            Err(err) => return match err {
+                DBError::NotFound => Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError))),
+                _ => Err(APIError::from(err)),
+            },
+        };
         let info = UserInfo {
             id: user.id,
             role: user.role,
             token_version: user.token_version,
         };
 
-        let user_password = get_user_password_by_user_id(&conn, user.id)?;
+        let user_password = match get_user_password_by_user_id(&conn, user.id) {
+            Ok(user_password) => user_password,
+            Err(err) => return match err {
+                DBError::NotFound => Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError))),
+                _ => Err(APIError::from(err)),
+            },
+        };
         if bcrypt::verify(&credentials.password, &user_password.password)? {
-            let token = encode_token(&info, &data.config)?;
+            let token = encode_token(&info, &config)?;
             Ok(token)
         } else {
             Err(APIError::UserError(UserError::Unauthorized(UnauthorizedError)))
@@ -174,7 +216,7 @@ fn get_user_from_body(conn: &DBPool, login: &str) -> Result<User, DBError> {
 
 pub fn encode_token(info: &UserInfo, app_config: &Config) -> Result<String, APIError> {
     let now = Utc::now();
-    let expiration = now + Duration::hours(app_config.jwt_expires_in.parse::<i64>().unwrap());
+    let expiration = now + Duration::hours(app_config.jwt_config.expires_in.parse::<i64>().unwrap());
 
     let claims = UserClaims {
         sub: info.id,
@@ -184,13 +226,13 @@ pub fn encode_token(info: &UserInfo, app_config: &Config) -> Result<String, APIE
         user_role: info.role,
     };
     let header = Header::new(Algorithm::HS512);
-    encode(&header, &claims, &EncodingKey::from_secret(app_config.jwt_secret.as_bytes()))
+    encode(&header, &claims, &EncodingKey::from_secret(app_config.jwt_config.secret.as_bytes()))
         .map_err(|_| APIError::ServerError(ServerError::InternalError(InternalError)))
 }
 
 pub fn decode_token(token: &str, app_config: &Config) -> Result<Uuid, APIError> {
     let validation = Validation::new(Algorithm::HS512);
-    let token_data = decode::<UserClaims>(token, &DecodingKey::from_secret(app_config.jwt_secret.as_bytes()), &validation)
+    let token_data = decode::<UserClaims>(token, &DecodingKey::from_secret(app_config.jwt_config.secret.as_bytes()), &validation)
         .map_err(|_| APIError::UserError(UserError::Unauthorized(UnauthorizedError)))?;
 
     Ok(token_data.claims.sub)
